# vscode-project-template-cmake-cxx

./: CMakeLists.txt  main.cpp
